gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail24212.d
version https://git-lfs.github.com/spec/v1
oid sha256:4898f29cd7ce56436c8abcfdc8f82e9112e847b65c149ff504af367effca3a0e
size 488
